--- a/GameTest/GameTest.vcxproj
+++ b/GameTest/GameTest.vcxproj
@@ -188,13 +188,22 @@
     <ClInclude Include="App\SimpleSound.h" />
     <ClInclude Include="App\SimpleSprite.h" />
     <ClInclude Include="Component.h" />
+    <ClInclude Include="Floor.h" />
+    <ClInclude Include="GolfBall.h" />
+    <ClInclude Include="HitboxComponent.h" />
+    <ClInclude Include="HitboxSystem.h" />
     <ClInclude Include="miniaudio\miniaudio.h" />
+    <ClInclude Include="MyVector.h" />
+    <ClInclude Include="Observer.h" />
+    <ClInclude Include="Platform.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Scene0.h" />
     <ClInclude Include="SpriteComponent.h" />
     <ClInclude Include="stb_image\stb_image.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="Subject.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TileMap.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Actor.cpp" />
@@ -205,7 +214,13 @@
     <ClCompile Include="App\SimpleSprite.cpp" />
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="GameTest.cpp" />
+    <ClCompile Include="Floor.cpp" />
+    <ClCompile Include="GolfBall.cpp" />
+    <ClCompile Include="HitboxComponent.cpp" />
+    <ClCompile Include="HitboxSystem.cpp" />
     <ClCompile Include="miniaudio\miniaudio.cpp" />
+    <ClCompile Include="MyVector.cpp" />
+    <ClCompile Include="Platform.cpp" />
     <ClCompile Include="Scene0.cpp" />
     <ClCompile Include="SpriteComponent.cpp" />
     <ClCompile Include="stb_image\stb_image.cpp" />
@@ -215,6 +230,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Subject.cpp" />
+    <ClCompile Include="TileMap.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
