--- a/GameTest/GameTest.vcxproj
+++ b/GameTest/GameTest.vcxproj
@@ -206,6 +206,7 @@
     <ClInclude Include="Subject.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TileMap.h" />
+    <ClInclude Include="VectorMath.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Actor.cpp" />
@@ -221,7 +222,6 @@
     <ClCompile Include="HitboxComponent.cpp" />
     <ClCompile Include="HitboxSystem.cpp" />
     <ClCompile Include="miniaudio\miniaudio.cpp" />
-    <ClCompile Include="MyVector.cpp" />
     <ClCompile Include="PhysicsComponent.cpp" />
     <ClCompile Include="PhysicsUtility.cpp" />
     <ClCompile Include="Platform.cpp" />
@@ -236,6 +236,7 @@
     </ClCompile>
     <ClCompile Include="Subject.cpp" />
     <ClCompile Include="TileMap.cpp" />
+    <ClCompile Include="VectorMath.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
