--- a/GameTest/GameTest.vcxproj
+++ b/GameTest/GameTest.vcxproj
@@ -187,11 +187,13 @@
     <ClInclude Include="App\SimpleController.h" />
     <ClInclude Include="App\SimpleSound.h" />
     <ClInclude Include="App\SimpleSprite.h" />
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="Floor.h" />
     <ClInclude Include="GolfBall.h" />
     <ClInclude Include="HitboxComponent.h" />
     <ClInclude Include="HitboxSystem.h" />
+    <ClInclude Include="MapConfig.h" />
     <ClInclude Include="miniaudio\miniaudio.h" />
     <ClInclude Include="MyVector.h" />
     <ClInclude Include="Observer.h" />
@@ -215,12 +217,14 @@
     <ClCompile Include="App\SimpleController.cpp" />
     <ClCompile Include="App\SimpleSound.cpp" />
     <ClCompile Include="App\SimpleSprite.cpp" />
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="GameTest.cpp" />
     <ClCompile Include="Floor.cpp" />
     <ClCompile Include="GolfBall.cpp" />
     <ClCompile Include="HitboxComponent.cpp" />
     <ClCompile Include="HitboxSystem.cpp" />
+    <ClCompile Include="MapConfig.cpp" />
     <ClCompile Include="miniaudio\miniaudio.cpp" />
     <ClCompile Include="PhysicsComponent.cpp" />
     <ClCompile Include="PhysicsUtility.cpp" />
