--- a/GameTest/GameTest.vcxproj
+++ b/GameTest/GameTest.vcxproj
@@ -202,6 +202,7 @@
     <ClInclude Include="Platform.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Scene0.h" />
+    <ClInclude Include="Scene1.h" />
     <ClInclude Include="SpriteComponent.h" />
     <ClInclude Include="stb_image\stb_image.h" />
     <ClInclude Include="stdafx.h" />
@@ -230,6 +231,7 @@
     <ClCompile Include="PhysicsUtility.cpp" />
     <ClCompile Include="Platform.cpp" />
     <ClCompile Include="Scene0.cpp" />
+    <ClCompile Include="Scene1.cpp" />
     <ClCompile Include="SpriteComponent.cpp" />
     <ClCompile Include="stb_image\stb_image.cpp" />
     <ClCompile Include="stdafx.cpp">
