About to update Physics code as it is getting wonky with angled blocks

--- a/GameTest/GameTest.vcxproj
+++ b/GameTest/GameTest.vcxproj
@@ -198,15 +198,19 @@
     <ClInclude Include="HitboxSystem.h" />
     <ClInclude Include="MapConfig.h" />
     <ClInclude Include="miniaudio\miniaudio.h" />
+    <ClInclude Include="MovingPlatform.h" />
     <ClInclude Include="MyVector.h" />
     <ClInclude Include="Observer.h" />
     <ClInclude Include="PhysicsComponent.h" />
     <ClInclude Include="PhysicsUtility.h" />
     <ClInclude Include="Platform.h" />
+    <ClInclude Include="Ramp.h" />
     <ClInclude Include="RotatingObstacle.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Scene0.h" />
     <ClInclude Include="Scene1.h" />
+    <ClInclude Include="Scene2.h" />
+    <ClInclude Include="Scene3.h" />
     <ClInclude Include="SpriteComponent.h" />
     <ClInclude Include="stb_image\stb_image.h" />
     <ClInclude Include="stdafx.h" />
@@ -234,12 +238,16 @@
     <ClCompile Include="HitboxSystem.cpp" />
     <ClCompile Include="MapConfig.cpp" />
     <ClCompile Include="miniaudio\miniaudio.cpp" />
+    <ClCompile Include="MovingPlatform.cpp" />
     <ClCompile Include="PhysicsComponent.cpp" />
     <ClCompile Include="PhysicsUtility.cpp" />
     <ClCompile Include="Platform.cpp" />
+    <ClCompile Include="Ramp.cpp" />
     <ClCompile Include="RotatingObstacle.cpp" />
     <ClCompile Include="Scene0.cpp" />
     <ClCompile Include="Scene1.cpp" />
+    <ClCompile Include="Scene2.cpp" />
+    <ClCompile Include="Scene3.cpp" />
     <ClCompile Include="SpriteComponent.cpp" />
     <ClCompile Include="stb_image\stb_image.cpp" />
     <ClCompile Include="stdafx.cpp">
