--- a/GameTest/GameTest.vcxproj
+++ b/GameTest/GameTest.vcxproj
@@ -188,9 +188,11 @@
     <ClInclude Include="App\SimpleController.h" />
     <ClInclude Include="App\SimpleSound.h" />
     <ClInclude Include="App\SimpleSprite.h" />
+    <ClInclude Include="BouncePad.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Collectible.h" />
     <ClInclude Include="Component.h" />
+    <ClInclude Include="DisappearingPlatform.h" />
     <ClInclude Include="Floor.h" />
     <ClInclude Include="GolfBall.h" />
     <ClInclude Include="GravityPowerUp.h" />
@@ -227,9 +229,11 @@
     <ClCompile Include="App\SimpleController.cpp" />
     <ClCompile Include="App\SimpleSound.cpp" />
     <ClCompile Include="App\SimpleSprite.cpp" />
+    <ClCompile Include="BouncePad.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Collectible.cpp" />
     <ClCompile Include="Component.cpp" />
+    <ClCompile Include="DisappearingPlatform.cpp" />
     <ClCompile Include="GameTest.cpp" />
     <ClCompile Include="Floor.cpp" />
     <ClCompile Include="GolfBall.cpp" />
